# datura-python-task

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
app/: main.py  worker.py
app/api/: dividends.py
app/core/: settings.py
app/schemas/: blockchain.py
app/services/: blockchain.py  cache.py  sentiment.py  twitter.py
app/tasks/: trade.py
