[project]
name = "bittensor-api-service"
version = "0.1.0"
description = "Async API service for Bittensor blockchain data with sentiment analysis"
authors = [
    {name = "Dima Ostapchuk",email = "ostapchukvox@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "bittensor (>=9.2.0,<10.0.0)",
    "fastapi (>=0.110.1,<0.111.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "redis (>=5.2.1,<6.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "celery (>=5.5.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

